examples/type_system/failing/162_tuple_destructure_unresolved_strict_e425.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/162_tuple_destructure_unresolved_strict_e425.flx
// error[E004]: Undefined Variable
//
// I can't find a value named `mystery_value`.
//
//   examples/type_system/failing/162_tuple_destructure_unresolved_strict_e425.flx:21:18
//    |
// 21 |     let (a, b) = mystery_value
//    |                  ^^^^^^^^^^^^^
//
// Hint:
//   Define it first: let mystery_value = ...;
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E004

fn main() -> Unit {
    let (a, b) = mystery_value
}
